# variant

./: .gitignore  Cargo.toml  README.md
extract/: Cargo.toml
extract/src/: lib.rs
src/: lib.rs
tests/: all_tests.rs  guard.rs  multi_extract.rs  multiple_args.rs  or_pattern.rs  or_pattern.stderr  simple.rs
