[package]
name = "extract-variant"
authors = ["Marcus Desai"]
version = "0.1.0"
edition = "2021"
#license = "MIT OR Apache-2.0"
repository = "https://github.com/marcusdesai/variant"
homepage = "https://github.com/marcusdesai/variant"
description = "Destructure expressions into, and return assignments from, a single pattern."
#keywords = ["multiset", "data-structure", "collection", "simd", "stack"]
#categories = ["data-structures"]
readme = "README.md"
#documentation = "https://docs.rs/extract-variant"
autotests = false

[lib]
name = "variant"

[[test]]
name = "tests"
path = "tests/all_tests.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
extract-impl = { path = "extract" }
