[package]
name = "extract-variant"
authors = ["Marcus Desai"]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/marcusdesai/variant"
homepage = "https://github.com/marcusdesai/variant"
description = "Destructure expressions into, and return assignments from, a single pattern."
keywords = ["pattern-match", "macro"]
categories = ["rust-patterns"]
readme = "README.md"
documentation = "https://docs.rs/extract-variant"
autotests = false

[lib]
name = "variant"

[[test]]
name = "tests"
path = "tests/all_tests.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
extract-variant-internal = { version = "0.2.0", path = "extract" }
