[package]
name = "extract-variant-internal"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "visit"] }
