[package]
name = "extract-variant-internal"
authors = ["Marcus Desai"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/marcusdesai/variant"
homepage = "https://github.com/marcusdesai/variant"
description = "Internal lib for https://docs.rs/extract-variant"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "visit"] }
